Rebrand root site to NEON ARCADE

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Nickogir Games - Play Snake online in your browser."
+      content="NEON ARCADE - Play Snake online in your browser."
     />
-    <title>Nickogir Games</title>
+    <title>NEON ARCADE</title>
     <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6827967239317511"
@@ -106,7 +106,7 @@
   <body>
     <main>
       <section class="hero">
-        <h1>NICKOGIR GAMES</h1>
+        <h1>NEON ARCADE</h1>
         <p>Play a fast browser Snake game with keyboard controls and score tracking.</p>
         <a class="cta" href="https://nickogir.github.io/snake-game/">Play Snake</a>
       </section>
