Improve root hub links and add root ads.txt

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
         flex-wrap: wrap;
       }
 
+      .updated {
+        margin-top: 14px;
+        font-size: 0.82rem;
+        color: var(--muted);
+      }
+
       .links a {
         color: var(--accent-2);
         text-decoration: none;
@@ -110,7 +116,11 @@
         <p>Play a fast browser Snake game with keyboard controls and score tracking.</p>
         <a class="cta" href="https://nickogir.github.io/snake-game/">Play Snake</a>
       </section>
+      <p class="updated">Last updated: February 13, 2026</p>
       <nav class="links" aria-label="Legal links">
+        <a href="https://nickogir.github.io/snake-game/how-to-play.html">How to Play</a>
+        <a href="https://nickogir.github.io/snake-game/faq.html">FAQ</a>
+        <a href="https://nickogir.github.io/snake-game/changelog.html">Changelog</a>
         <a href="https://nickogir.github.io/snake-game/privacy.html">Privacy</a>
         <a href="https://nickogir.github.io/snake-game/terms.html">Terms</a>
       </nav>
