Link About and Contact pages from root hub

--- a/index.html
+++ b/index.html
@@ -121,6 +121,8 @@
         <a href="https://nickogir.github.io/snake-game/how-to-play.html">How to Play</a>
         <a href="https://nickogir.github.io/snake-game/faq.html">FAQ</a>
         <a href="https://nickogir.github.io/snake-game/changelog.html">Changelog</a>
+        <a href="https://nickogir.github.io/snake-game/about.html">About Us</a>
+        <a href="https://nickogir.github.io/snake-game/contact.html">Contact Us</a>
         <a href="https://nickogir.github.io/snake-game/privacy.html">Privacy</a>
         <a href="https://nickogir.github.io/snake-game/terms.html">Terms</a>
       </nav>
