Make root landing page more visually dynamic

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     ></script>
     <style>
       :root {
-        --bg-1: #0f1520;
-        --bg-2: #141f31;
-        --card: #1b283d;
+        --bg-1: #080d15;
+        --bg-2: #121a2b;
+        --card: #182337;
         --text: #f2f6ff;
         --muted: #b9c7e3;
-        --accent: #42d392;
+        --accent: #40db9f;
         --accent-2: #7fd8ff;
-        --border: #2f3e58;
+        --border: #304261;
       }
 
       * {
@@ -35,25 +35,30 @@
         display: grid;
         place-items: center;
         font-family: "Trebuchet MS", "Segoe UI", Arial, sans-serif;
-        background: radial-gradient(circle at 20% 10%, var(--bg-2) 0%, var(--bg-1) 60%);
+        background:
+          radial-gradient(circle at 12% 12%, #1a2f4f 0%, transparent 34%),
+          radial-gradient(circle at 88% 18%, #163d31 0%, transparent 31%),
+          radial-gradient(circle at 70% 80%, #2a1b4a 0%, transparent 36%),
+          radial-gradient(circle at 20% 10%, var(--bg-2) 0%, var(--bg-1) 62%);
         color: var(--text);
       }
 
       main {
-        width: min(92vw, 620px);
+        width: min(94vw, 760px);
         padding: 26px;
         border: 1px solid var(--border);
         border-radius: 14px;
         background: color-mix(in oklab, var(--card) 92%, black);
         box-shadow: 0 12px 30px rgb(0 0 0 / 35%);
+        backdrop-filter: blur(2px);
       }
 
       h1 {
-        margin: 0 0 10px;
-        font-size: clamp(1.8rem, 6vw, 2.7rem);
-        letter-spacing: 0.08em;
+        margin: 0;
+        font-size: clamp(2rem, 7vw, 3rem);
+        letter-spacing: 0.12em;
         color: var(--text);
-        text-shadow: 0 0 14px rgb(66 211 146 / 35%);
+        text-shadow: 0 0 16px rgb(64 219 159 / 34%);
       }
 
       p {
@@ -64,28 +69,60 @@
 
       .hero {
         display: grid;
-        gap: 14px;
+        gap: 12px;
+      }
+
+      .eyebrow {
+        font-size: 0.78rem;
+        letter-spacing: 0.12em;
+        text-transform: uppercase;
+        color: #8ec9ff;
+        font-weight: 700;
       }
 
       .cta {
         display: inline-block;
         width: fit-content;
-        margin-top: 4px;
-        padding: 10px 16px;
+        margin-top: 6px;
+        padding: 11px 18px;
         border-radius: 9px;
-        border: 1px solid #51e1a4;
-        background: #173827;
+        border: 1px solid #4fe4a5;
+        background: linear-gradient(130deg, #184632 0%, #163a5a 100%);
         color: var(--text);
         font-weight: 700;
         text-decoration: none;
       }
 
       .cta:hover {
-        background: #21523a;
+        background: linear-gradient(130deg, #1f5a40 0%, #1f4c74 100%);
+      }
+
+      .grid {
+        margin-top: 18px;
+        display: grid;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        gap: 10px;
+      }
+
+      .tile {
+        border: 1px solid #2f4262;
+        border-radius: 10px;
+        padding: 10px;
+        background: rgb(7 16 29 / 52%);
+      }
+
+      .tile h2 {
+        margin: 0 0 4px;
+        font-size: 0.92rem;
+        color: #d8e6ff;
+      }
+
+      .tile p {
+        font-size: 0.82rem;
       }
 
       .links {
-        margin-top: 18px;
+        margin-top: 16px;
         padding-top: 14px;
         border-top: 1px solid var(--border);
         display: flex;
@@ -94,7 +131,7 @@
       }
 
       .updated {
-        margin-top: 14px;
+        margin-top: 10px;
         font-size: 0.82rem;
         color: var(--muted);
       }
@@ -107,14 +144,35 @@
       .links a:hover {
         text-decoration: underline;
       }
+
+      @media (width <= 760px) {
+        .grid {
+          grid-template-columns: 1fr;
+        }
+      }
     </style>
   </head>
   <body>
     <main>
       <section class="hero">
+        <p class="eyebrow">Browser Mini Games</p>
         <h1>NEON ARCADE</h1>
-        <p>Play a fast browser Snake game with keyboard controls and score tracking.</p>
+        <p>Play fast, clean browser games. Start with Snake and jump into instant sessions.</p>
         <a class="cta" href="https://nickogir.github.io/snake-game/">Play Snake</a>
+      </section>
+      <section class="grid" aria-label="Highlights">
+        <article class="tile">
+          <h2>Instant Start</h2>
+          <p>No downloads. Open and play in seconds.</p>
+        </article>
+        <article class="tile">
+          <h2>Skill Loop</h2>
+          <p>Score tracking with quick restart flow.</p>
+        </article>
+        <article class="tile">
+          <h2>Consistent Updates</h2>
+          <p>Feature and quality updates are logged publicly.</p>
+        </article>
       </section>
       <p class="updated">Last updated: February 13, 2026</p>
       <nav class="links" aria-label="Legal links">
