--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     ></script>
     <style>
       :root {
-        --bg-1: #080d15;
-        --bg-2: #121a2b;
-        --card: #182337;
+        --bg-1: #070c14;
+        --bg-2: #10192a;
+        --card: #162339;
         --text: #f2f6ff;
         --muted: #b9c7e3;
         --accent: #40db9f;
         --accent-2: #7fd8ff;
-        --border: #304261;
+        --border: rgb(138 181 255 / 22%);
       }
 
       * {
@@ -41,17 +41,59 @@
           radial-gradient(circle at 70% 80%, #2a1b4a 0%, transparent 36%),
           radial-gradient(circle at 20% 10%, var(--bg-2) 0%, var(--bg-1) 62%);
         color: var(--text);
+        overflow-x: hidden;
+      }
+
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        pointer-events: none;
+        opacity: 0.03;
+        background-image: repeating-linear-gradient(
+          0deg,
+          rgb(255 255 255 / 100%) 0 1px,
+          transparent 1px 4px
+        );
+      }
+
+      body::after {
+        content: "";
+        position: fixed;
+        width: min(82vw, 920px);
+        height: min(55vh, 500px);
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        border-radius: 999px;
+        pointer-events: none;
+        background: radial-gradient(circle, rgb(65 156 255 / 18%) 0%, transparent 68%);
+        filter: blur(10px);
       }
 
       main {
-        width: min(94vw, 760px);
-        padding: 30px 28px 24px;
+        width: min(95vw, 900px);
+        padding: 36px 38px 24px;
         border: 1px solid var(--border);
-        border-radius: 14px;
-        background: color-mix(in oklab, var(--card) 92%, black);
-        box-shadow: 0 12px 30px rgb(0 0 0 / 35%);
-        backdrop-filter: blur(2px);
+        border-radius: 18px;
+        background: rgb(22 35 57 / 86%);
+        box-shadow:
+          0 18px 44px rgb(0 0 0 / 40%),
+          0 0 28px rgb(79 153 255 / 16%);
+        backdrop-filter: blur(6px);
         text-align: center;
+        transition:
+          transform 160ms ease,
+          box-shadow 220ms ease,
+          border-color 220ms ease;
+      }
+
+      main:hover {
+        transform: translateY(-2px);
+        border-color: rgb(138 181 255 / 28%);
+        box-shadow:
+          0 24px 52px rgb(0 0 0 / 44%),
+          0 0 34px rgb(79 153 255 / 20%);
       }
 
       h1 {
@@ -109,26 +151,61 @@
         color: #d2def6;
       }
 
+      .preview {
+        margin: 6px auto 0;
+        width: min(100%, 720px);
+        border: 1px solid rgb(122 164 234 / 24%);
+        border-radius: 12px;
+        background: rgb(8 16 29 / 70%);
+        position: relative;
+        overflow: hidden;
+        box-shadow: 0 8px 20px rgb(0 0 0 / 34%);
+      }
+
+      .preview iframe {
+        display: block;
+        width: 100%;
+        height: min(28vw, 220px);
+        min-height: 190px;
+        border: 0;
+        pointer-events: none;
+      }
+
+      .preview-badge {
+        position: absolute;
+        top: 10px;
+        left: 10px;
+        z-index: 1;
+        padding: 4px 8px;
+        border-radius: 999px;
+        border: 1px solid rgb(121 174 255 / 30%);
+        background: rgb(7 20 39 / 82%);
+        color: #cde3ff;
+        font-size: 0.72rem;
+        letter-spacing: 0.04em;
+      }
+
       .cta-row {
         display: flex;
         align-items: center;
         justify-content: center;
         gap: 12px;
         flex-wrap: wrap;
+        margin-top: 2px;
       }
 
       .cta {
         display: inline-block;
         width: fit-content;
         margin-top: 2px;
-        padding: 15px 28px;
+        padding: 16px 34px;
         border-radius: 12px;
         border: 1px solid #4fe4a5;
         background: linear-gradient(130deg, #184632 0%, #163a5a 100%);
         color: var(--text);
         font-weight: 800;
         text-decoration: none;
-        font-size: 1.12rem;
+        font-size: 1.18rem;
         letter-spacing: 0.02em;
         box-shadow: 0 8px 20px rgb(19 68 50 / 38%);
         transition:
@@ -144,6 +221,25 @@
         box-shadow: 0 11px 24px rgb(20 87 64 / 46%);
       }
 
+      .cta:active {
+        transform: translateY(0);
+        box-shadow: 0 5px 14px rgb(20 87 64 / 34%);
+      }
+
+      .cta.secondary {
+        padding: 14px 22px;
+        font-size: 0.96rem;
+        border-color: #4f86cc;
+        background: linear-gradient(130deg, #132848 0%, #172e4e 100%);
+        box-shadow: 0 7px 16px rgb(18 35 63 / 36%);
+      }
+
+      .cta.secondary:hover {
+        border-color: #7eb6ff;
+        background: linear-gradient(130deg, #17335e 0%, #1e3f6f 100%);
+        box-shadow: 0 10px 20px rgb(24 49 89 / 45%);
+      }
+
       .cta-secondary {
         color: #9fd8ff;
         text-decoration: none;
@@ -154,30 +250,37 @@
         text-decoration: underline;
       }
 
-      .links {
+      .footer-bar {
         margin-top: 16px;
         padding-top: 14px;
         border-top: 1px solid var(--border);
         display: flex;
+        align-items: center;
+        justify-content: space-between;
         gap: 12px;
-        flex-wrap: wrap;
-        justify-content: center;
       }
 
       .updated {
-        margin-top: 14px;
-        font-size: 0.81rem;
-        color: #aab8d7;
+        font-size: 12px;
+        color: rgb(170 184 215 / 66%);
+        white-space: nowrap;
       }
 
-      .links a {
+      .link-group {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 10px;
+      }
+
+      .link-group a {
         color: #90b8e8;
         text-decoration: none;
-        font-size: 0.78rem;
+        font-size: 0.77rem;
         opacity: 0.84;
       }
 
-      .links a:hover {
+      .link-group a:hover {
         text-decoration: underline;
         opacity: 1;
       }
@@ -185,6 +288,15 @@
       @media (width <= 760px) {
         main {
           padding: 24px 18px 20px;
+        }
+
+        .footer-bar {
+          flex-direction: column;
+          align-items: center;
+        }
+
+        .updated {
+          order: 3;
         }
       }
     </style>
@@ -200,23 +312,36 @@
         <p class="subtitle">
           Play fast, clean browser games. Start with Snake and jump into instant sessions.
         </p>
+        <section class="preview" aria-label="Snake preview">
+          <span class="preview-badge">Snake • Classic</span>
+          <iframe
+            src="https://nickogir.github.io/snake-game/"
+            title="Snake preview"
+            loading="lazy"
+          ></iframe>
+        </section>
         <div class="cta-row">
-          <a class="cta" href="https://nickogir.github.io/snake-game/">Play Snake</a>
-          <a class="cta-secondary" href="https://nickogir.github.io/snake-game/how-to-play.html"
-            >How it works</a
-          >
+          <a class="cta" href="https://nickogir.github.io/snake-game/">Start playing</a>
+          <a class="cta secondary" href="https://nickogir.github.io/snake-game/">Choose a game</a>
         </div>
+        <a class="cta-secondary" href="https://nickogir.github.io/snake-game/how-to-play.html"
+          >How it works</a
+        >
       </section>
-      <p class="updated">Last updated: February 13, 2026</p>
-      <nav class="links" aria-label="Legal links">
-        <a href="https://nickogir.github.io/snake-game/how-to-play.html">How to Play</a>
-        <a href="https://nickogir.github.io/snake-game/faq.html">FAQ</a>
-        <a href="https://nickogir.github.io/snake-game/changelog.html">Changelog</a>
-        <a href="https://nickogir.github.io/snake-game/about.html">About Us</a>
-        <a href="https://nickogir.github.io/snake-game/contact.html">Contact Us</a>
-        <a href="https://nickogir.github.io/snake-game/privacy.html">Privacy</a>
-        <a href="https://nickogir.github.io/snake-game/terms.html">Terms</a>
-      </nav>
+      <footer class="footer-bar" aria-label="Site links">
+        <nav class="link-group" aria-label="Game links">
+          <a href="https://nickogir.github.io/snake-game/">Games</a>
+          <a href="https://nickogir.github.io/snake-game/how-to-play.html">How to play</a>
+          <a href="https://nickogir.github.io/snake-game/changelog.html">Changelog</a>
+        </nav>
+        <nav class="link-group" aria-label="Company links">
+          <a href="https://nickogir.github.io/snake-game/about.html">About</a>
+          <a href="https://nickogir.github.io/snake-game/contact.html">Contact</a>
+          <a href="https://nickogir.github.io/snake-game/privacy.html">Privacy</a>
+          <a href="https://nickogir.github.io/snake-game/terms.html">Terms</a>
+        </nav>
+        <span class="updated">Last updated: February 13, 2026</span>
+      </footer>
     </main>
   </body>
 </html>
