--- a/index.html
+++ b/index.html
@@ -326,9 +326,9 @@
         margin: 24px auto 0;
         padding-top: 14px;
         border-top: 1px solid var(--border);
-        display: flex;
+        display: grid;
+        grid-template-columns: 1fr auto 1fr;
         align-items: center;
-        justify-content: space-between;
         gap: 12px;
       }
 
@@ -336,6 +336,7 @@
         font-size: 11px;
         color: rgb(170 184 215 / 56%);
         white-space: nowrap;
+        justify-self: end;
       }
 
       .link-group {
@@ -343,6 +344,14 @@
         align-items: center;
         flex-wrap: wrap;
         gap: 10px;
+      }
+
+      .footer-bar .link-group:first-of-type {
+        justify-self: start;
+      }
+
+      .footer-bar .link-group:last-of-type {
+        justify-self: center;
       }
 
       .link-group a {
@@ -364,6 +373,7 @@
 
         .footer-bar {
           width: 100%;
+          display: flex;
           flex-direction: column;
           align-items: center;
         }
